--- a/app/globals.css
+++ b/app/globals.css
@@ -167,3 +167,10 @@ body {
   height: 340px !important;
   flex-shrink: 0;
 }
+
+.no-select {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
