update team section

--- a/app/globals.css
+++ b/app/globals.css
@@ -168,3 +168,14 @@ body {
   flex-shrink: 0;
 }
 
+@media (max-width: 640px) {
+  .swiper-slide-active .team-member {
+      transform: scale(1.25);
+  }
+}
+
+@media (min-width: 641px) {
+  .swiper-slide .team-member {
+      transform: none !important;
+  }
+}
