update header, page

--- a/app/globals.css
+++ b/app/globals.css
@@ -162,6 +162,7 @@
 
 body {
   font-family: var(--font-clash-grotesk), sans-serif;
+  overscroll-behavior: none;
 }
 
 .testimonials-swiper .swiper-slide {
